--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,32 +1,78 @@
+/* Home Page animations*/
+@keyframes typing {
+    from {
+      width: 0;
+      opacity: 0;
+      transform-origin: left;
+    }
+    to {
+      width: 100%;
+      opacity: 1;
+      transform: scaleX(1);
+      transform-origin: left;
+    }
+  }
+  
+.typewriter-effect {
+    white-space: nowrap;
+    overflow: hidden;
+    animation: typing 1.5s linear;
+    opacity: 0;
+    animation-fill-mode: forwards;
+}
+
+.typewriter-effect:nth-child(2) {
+    animation-delay: 1.5s;
+}
+
+@keyframes fade-in {
+    from {
+        opacity: 0;
+        filter: blur(3px);
+    }
+    to {
+        opacity: 1;
+        filter: blur(0);
+    }
+}
+
+.fade-in-home {
+    animation: fade-in 1.5s;
+    opacity: 0;
+    animation-delay: 3.5s;
+    animation-fill-mode: forwards; 
+}
+
+/* About Page animations*/
 .skill:nth-child(2) {
-    transition-delay: 80ms;
+    transition-delay: 50ms;
 }
 .skill:nth-child(3) {
-    transition-delay: 160ms;
+    transition-delay: 100ms;
 }
 .skill:nth-child(4) {
-    transition-delay: 240ms;
+    transition-delay: 150ms;
 }
 .skill:nth-child(5) {
-    transition-delay: 320ms;
+    transition-delay: 200ms;
 }
 .skill:nth-child(6) {
-    transition-delay: 400ms;
+    transition-delay: 250ms;
 }
 .skill:nth-child(7) {
-    transition-delay: 480ms;
+    transition-delay: 300ms;
 }
 .skill:nth-child(8) {
-    transition-delay: 560ms;
+    transition-delay: 350ms;
 }
 .skill:nth-child(9) {
-    transition-delay: 640ms;
+    transition-delay: 400ms;
 }
 
 .skillHidden {
     opacity: 0;
     filter: blur(5px);
-    transform: translateX(-100%);
+    transform: translateY(100%);
     transition: all 0.7s;
 }
 
