--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,12 @@
-/* Home Page animations*/
+.wrapper {
+    height: 100vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+    perspective: 10px;
+}
+
+
+/* Home page animations*/
 @keyframes typing {
     from {
       width: 0;
@@ -8,7 +16,6 @@
     to {
       width: 100%;
       opacity: 1;
-      transform: scaleX(1);
       transform-origin: left;
     }
   }
@@ -43,41 +50,85 @@
     animation-fill-mode: forwards; 
 }
 
-/* About Page animations*/
+/* About page animations*/
+@keyframes come-top {
+    from {
+        opacity: 0;
+        filter: blur(5px);
+        transform: translateY(100%);
+        transition: all 0.7s;
+    }
+    to {
+        opacity: 1;
+        filter: blur(0);
+        transform: translateX(0);
+    }
+}
+
 .skill:nth-child(2) {
-    transition-delay: 50ms;
+    animation-delay: 50ms;
 }
 .skill:nth-child(3) {
-    transition-delay: 100ms;
+    animation-delay: 100ms;
 }
 .skill:nth-child(4) {
-    transition-delay: 150ms;
+    animation-delay: 150ms;
 }
 .skill:nth-child(5) {
-    transition-delay: 200ms;
+    animation-delay: 200ms;
 }
 .skill:nth-child(6) {
-    transition-delay: 250ms;
+    animation-delay: 250ms;
 }
 .skill:nth-child(7) {
-    transition-delay: 300ms;
+    animation-delay: 300ms;
 }
 .skill:nth-child(8) {
-    transition-delay: 350ms;
+    animation-delay: 350ms;
 }
 .skill:nth-child(9) {
-    transition-delay: 400ms;
+    animation-delay: 400ms;
 }
 
 .skillHidden {
     opacity: 0;
-    filter: blur(5px);
-    transform: translateY(100%);
-    transition: all 0.7s;
 }
 
 .skillShow {
-    opacity: 1;
-    filter: blur(0);
-    transform: translateX(0);
+    animation: come-top 0.8s;
+    animation-fill-mode: forwards;
+}
+
+/* Project page animations*/
+@keyframes come-left {
+    from {
+        opacity: 0;
+        filter: blur(2px);
+        transform: translateX(-100%);
+    }
+    to {
+        opacity: 1;
+        transition: all 0.8s;
+        filter: blur(0);
+        transform: translateX(0);
+    }
+}
+
+.project:nth-child(2) {
+    animation-delay: 100ms;
+}
+.project:nth-child(3) {
+    animation-delay: 250ms;
+}
+.project:nth-child(4) {
+    animation-delay: 500ms;
+}
+
+.projectHidden {
+    opacity: 0;
+}
+
+.projectShow {
+    animation: come-left 0.7s;
+    animation-fill-mode: forwards;
 }
