Updated Styles and Code clean up

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,7 +2,6 @@
     width: 100vw;
     height: 100vh;
     overflow-x: hidden;
-    transform-style: preserve-3d;
 }
 /* Home page animations/effects */
 
@@ -134,7 +133,6 @@
 
 /* Project page styles*/
 .contact-input {
-    width: 400px;
     padding: 10px;
     box-sizing: border-box;
     border: 2px solid grey;
@@ -142,6 +140,8 @@
     font-size: 16px;
     background-color: transparent;
     transition: border-color 0.3s;
+    margin: 5px;
+    
 }
   
 .contact-input:focus {
